--- a/index.html
+++ b/index.html
@@ -52,6 +52,25 @@
 				</div>
 			</secion>
 		</main>
-		<footer class="primary-footer"></footer>
+		<footer class="primary-footer">
+
+			<div class="primary-footer-wrapper">
+				<picture class="primary-footer-picture">
+					<source srcset="./assets/desktop/image-footer.jpg" media="(min-width: 900px)">
+					<source srcset="./assets/tablet/image-footer.jpg" media="(min-width: 400px)">
+					<img src="./assets/mobile/image-footer.jpg" alt="">
+				</picture>
+				<div class="primary-footer-text">
+					<div class="col">
+						<h3 class="fs-h3 fc-100 fw-900">Experience more together</h3>
+					</div>
+					<div class="col">
+						<p class="fc-100">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+					</div>
+					<div class="col"><button class="btn"><a href="">Download <span class="btn-span">v1.3</span></a></button></div>
+				</div>
+			</div>
+
+		</footer>
 	</body>
 </html>
